--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ path = "src/main.rs"
 
 [dependencies]
 anyhow = "1.0.98"
+clap = { version = "4.5.39", features = ["derive"] }
 git2 = "0.20.2"
 rand = "0.9.1"
 tempfile = "3.20.0"
